Intermittent Assertion failure: get() (dereferencing a UniquePtr containing nullptr), at /builds/worker/workspace/obj-build/dist/include/mozilla/UniquePtr.h:281
Categories
(Core :: Graphics: Canvas2D, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox77 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: bobowen)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: archaeopteryx [at] coole-files.de
Parsed log: http://localhost:5000/logviewer.html#?job_id=297701866&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/DxPTyJ3sQDyBA_6sG8HAUg/runs/0/artifacts/public/logs/live_backing.log
Reftest URL: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/DxPTyJ3sQDyBA_6sG8HAUg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1
[task 2020-04-15T09:43:13.531Z] 09:43:13 INFO - REFTEST TEST-END | dom/canvas/test/reftest/filters/strokeText-with-shadow-2.html != dom/canvas/test/reftest/filters/strokeText-without-shadow-2-ref.html
[task 2020-04-15T09:43:13.551Z] 09:43:13 INFO - REFTEST INFO | Slowest test took 563ms (file:///Z:/task_1586941591/build/tests/reftest/tests/dom/canvas/test/reftest/filters/shadow-ref.html)
[task 2020-04-15T09:43:13.551Z] 09:43:13 INFO - REFTEST INFO | Total canvas count = 0
[task 2020-04-15T09:43:14.236Z] 09:43:14 INFO - [GPU 1392, Compositor] WARNING: Possibly dropping task posted to updater thread: file /builds/worker/checkouts/gecko/gfx/layers/apz/src/APZUpdater.cpp, line 371
[task 2020-04-15T09:43:14.282Z] 09:43:14 INFO - [GPU 1392, Compositor] WARNING: Possibly dropping task posted to updater thread: file /builds/worker/checkouts/gecko/gfx/layers/apz/src/APZUpdater.cpp, line 371
[task 2020-04-15T09:43:14.341Z] 09:43:14 INFO - [Parent 2004, Main Thread] WARNING: IInputPane2::TryHide is failure: 'result', file /builds/worker/checkouts/gecko/widget/windows/OSKInputPaneManager.cpp, line 69
[task 2020-04-15T09:43:14.341Z] 09:43:14 INFO - ###!!! [Parent][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2020-04-15T09:43:14.374Z] 09:43:14 INFO - Assertion failure: get() (dereferencing a UniquePtr containing nullptr), at /builds/worker/workspace/obj-build/dist/include/mozilla/UniquePtr.h:281
[task 2020-04-15T09:43:14.381Z] 09:43:14 INFO - [Parent 2004, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80040111 (NS_ERROR_NOT_AVAILABLE): file /builds/worker/checkouts/gecko/netwerk/cache/nsApplicationCacheService.cpp, line 161
[task 2020-04-15T09:43:14.600Z] 09:43:14 INFO - Initializing stack-fixing for the first stack frame, this may take a while...
[task 2020-04-15T09:43:32.841Z] 09:43:32 INFO - #01: mozilla::detail::RunnableMethodImpl<mozilla::layers::CanvasTranslator ,void (mozilla::layers::CanvasTranslator::)(),1,mozilla::RunnableKind::Standard>::Run() [hg:hg.mozilla.org/integration/autoland:xpcom/threads/nsThreadUtils.h:796728edcf88e9741b803ef38da2a484daec5745:1223]
[task 2020-04-15T09:43:32.842Z] 09:43:32 INFO - #02: mozilla::TaskQueue::Runner::Run() [hg:hg.mozilla.org/integration/autoland:xpcom/threads/TaskQueue.cpp:796728edcf88e9741b803ef38da2a484daec5745:208]
[task 2020-04-15T09:43:32.843Z] 09:43:32 INFO - #03: nsThreadPool::Run() [hg:hg.mozilla.org/integration/autoland:xpcom/threads/nsThreadPool.cpp:796728edcf88e9741b803ef38da2a484daec5745:302]
[task 2020-04-15T09:43:32.843Z] 09:43:32 INFO - #04: nsThread::ProcessNextEvent(bool, bool*) [hg:hg.mozilla.org/integration/autoland:xpcom/threads/nsThread.cpp:796728edcf88e9741b803ef38da2a484daec5745:1202]
[task 2020-04-15T09:43:32.843Z] 09:43:32 INFO - #05: NS_ProcessNextEvent(nsIThread*, bool) [hg:hg.mozilla.org/integration/autoland:xpcom/threads/nsThreadUtils.cpp:796728edcf88e9741b803ef38da2a484daec5745:481]
[task 2020-04-15T09:43:32.844Z] 09:43:32 INFO - #06: mozilla::ipc::MessagePumpForNonMainThreads::Run(base::MessagePump::Delegate*) [hg:hg.mozilla.org/integration/autoland:ipc/glue/MessagePump.cpp:796728edcf88e9741b803ef38da2a484daec5745:303]
[task 2020-04-15T09:43:32.844Z] 09:43:32 INFO - #07: MessageLoop::RunHandler() [hg:hg.mozilla.org/integration/autoland:ipc/chromium/src/base/message_loop.cc:796728edcf88e9741b803ef38da2a484daec5745:309]
[task 2020-04-15T09:43:32.844Z] 09:43:32 INFO - #08: MessageLoop::Run() [hg:hg.mozilla.org/integration/autoland:ipc/chromium/src/base/message_loop.cc:796728edcf88e9741b803ef38da2a484daec5745:291]
[task 2020-04-15T09:43:32.844Z] 09:43:32 INFO - #09: static nsThread::ThreadFunc(void*) [hg:hg.mozilla.org/integration/autoland:xpcom/threads/nsThread.cpp:796728edcf88e9741b803ef38da2a484daec5745:446]
[task 2020-04-15T09:43:33.205Z] 09:43:33 INFO - #10: PR_NativeRunThread(void*) [hg:hg.mozilla.org/integration/autoland:nsprpub/pr/src/threads/combined/pruthr.c:796728edcf88e9741b803ef38da2a484daec5745:408]
[task 2020-04-15T09:43:33.205Z] 09:43:33 INFO - #11: pr_root(void*) [hg:hg.mozilla.org/integration/autoland:nsprpub/pr/src/md/windows/w95thred.c:796728edcf88e9741b803ef38da2a484daec5745:140]
[task 2020-04-15T09:43:33.205Z] 09:43:33 INFO - fix-stacks error: failed to read breakpad symbols dir Z:\task_1586941591\build\symbols\ucrtbase.pdb
for C:\Windows\System32\ucrtbase.dll
[task 2020-04-15T09:43:33.206Z] 09:43:33 INFO - fix-stacks note: this is expected and harmless for system libraries on debug automation runs
[task 2020-04-15T09:43:33.206Z] 09:43:33 INFO - #12: o_ceil [C:\Windows\System32\ucrtbase.dll + 0x1c4be]
[task 2020-04-15T09:43:33.206Z] 09:43:33 INFO - fix-stacks error: failed to read breakpad symbols dir Z:\task_1586941591\build\symbols\KERNEL32.DLL
for C:\Windows\System32\KERNEL32.DLL
[task 2020-04-15T09:43:33.206Z] 09:43:33 INFO - fix-stacks note: this is expected and harmless for system libraries on debug automation runs
[task 2020-04-15T09:43:33.207Z] 09:43:33 INFO - #13: BaseThreadInitThunk [C:\Windows\System32\KERNEL32.DLL + 0x13034]
[task 2020-04-15T09:43:33.292Z] 09:43:33 INFO - #14: patched_BaseThreadInitThunk(int, void*, void*) [hg:hg.mozilla.org/integration/autoland:mozglue/dllservices/WindowsDllBlocklist.cpp:796728edcf88e9741b803ef38da2a484daec5745:593]
[task 2020-04-15T09:43:33.293Z] 09:43:33 INFO - fix-stacks error: failed to read breakpad symbols dir Z:\task_1586941591\build\symbols\ntdll.pdb
for C:\Windows\SYSTEM32\ntdll.dll
[task 2020-04-15T09:43:33.293Z] 09:43:33 INFO - fix-stacks note: this is expected and harmless for system libraries on debug automation runs
[task 2020-04-15T09:43:33.294Z] 09:43:33 INFO - #15: RtlUserThreadStart [C:\Windows\SYSTEM32\ntdll.dll + 0x71461]
Updated•5 years ago
|
Assignee | ||
Comment 1•5 years ago
|
||
This is from enabling remote canvas again.
The crash reason doesn't quite make sense, but the stack from the dump is down to the fact I hadn't replaced all the uses of Unsound_IsClosed.
Doesn't look like it's hit very often, which would make sense.
Updated•5 years ago
|
Assignee | ||
Comment 2•5 years ago
|
||
Comment 4•5 years ago
|
||
bugherder |
Comment hidden (Intermittent Failures Robot) |
Description
•