Bug 1630223: Replace remaining occurrences of Unsound_IsClosed with !CanSend in CanvasTranslator. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D71039